# DirectAdminAPI_SGS

./: .gitignore  LICENSE  README.md  pyproject.toml
src/DirectAdminAPI_SGS_shohani/: api.py
tests/: test.py
