[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "DirectAdminAPI_SGS_shohani"
version = "0.0.3"
authors = [
  { name="Sadegh Ghanbari Shohani", email="sadegh.tkd@gmail.com" },
]
description = "DirectAdmin API for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sadeghtkd/DirectAdminAPI_SGS"
"Bug Tracker" = "https://github.com/sadeghtkd/DirectAdminAPI_SGS/issues"